Fixed width for #menu-wrap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -412,7 +412,8 @@ label a {
     padding-bottom: 17px;
     font-family: "Microsoft Sans Serif", "Sans Serif";
     font-size: .8em;
-    width: 100%;
+    /* width: 100%; */
+    width: 250px;
     /* box-shadow:0px 1px 3px rgba(0,0,0,.2); */
 }
 
@@ -661,6 +662,7 @@ label a {
     }
 
     #menu-wrap {
+        width: 300px;
         margin-left: 32px;
         padding-bottom: 23px;
         font-size: 1.2em;
